tela projetos finalizada

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,2 @@
-<body>
-  
-  <p-button label="Check" icon="pi pi-check"></p-button>
-</body>
+<app-nav></app-nav>
+<app-tela-projetos></app-tela-projetos>
