--- a/src/app/core/pages/components/nav/nav.component.html
+++ b/src/app/core/pages/components/nav/nav.component.html
@@ -1,1 +1,27 @@
-<p>nav works!</p>
+<div class="w-full h-20 bg-corNav flex justify-center drop-shadow-md">
+    <div class="w-4/5 h-20 bg-corNav grid grid-cols-5 ">
+      <div class="flex items-center justify-start px-5 text-sky-900">
+        <i class="pi pi-list" style="font-size: 2.2rem;"></i>
+      </div>
+      <div
+        class="flex items-center justify-start px-5 col-start-3 col-end-5 h-full"
+      >
+        <span class="p-input-icon-right w-full h-full">
+          <div class="flex items-center h-full">
+            <input
+              type="text"
+              pInputText
+              class="w-4/5 h-3/5 px-5 rounded-lg border-2 border-sky-900"
+            />
+            <!--<ion-icon name="search-outline" class="text-6xl"></ion-icon> -->
+          </div>
+        </span>
+      </div>
+      <div
+        class="ml-16 mr-30 flex items-center justify-between px-5 text-sky-900"
+      >
+         <i class="pi pi-moon" style="font-size: 2.2rem;"></i>
+        <i class="pi pi-user" style="font-size: 2.2rem;"></i>
+      </div>
+    </div>
+  </div>
