--- a/src/app/core/pages/tela-projetos/tela-projetos.component.html
+++ b/src/app/core/pages/tela-projetos/tela-projetos.component.html
@@ -1,1 +1,11 @@
-<p>tela-projetos works!</p>
+<div class="w-full h-full bg-white">
+    <div class="flex justify-center pt-16 h-2/6">
+        <div class="w-3/4">
+            <p class="text-5xl text-sky-900 font-semibold pb-6">Equipe Padrão</p>
+            <div class="mt-10 flex justify-between">
+                <button pButton type="button" icon="pi pi-plus" iconPos="left" class="w-1/3 h-14 text-xl max-w-xs " label="Adicionar Projeto"></button>
+                <p-button label="Filtros" styleClass="p-button-text" iconPos="right" icon="pi pi-filter"></p-button>
+            </div>
+        </div>
+    </div>
+</div>
