mudança da cor do card

--- a/src/app/core/pages/components/car/car.component.html
+++ b/src/app/core/pages/components/car/car.component.html
@@ -1,4 +1,4 @@
-<div class="w-4/5 h-3/5 min-h-full bg-slate-100 drop-shadow-2xl rounded">
+<div class="w-4/5 h-3/5 min-h-full bg-white drop-shadow-2xl rounded">
     <div class="flex items-center justify-between p-3">
         <p>data final: 00/00</p>
         <div>
