component cards feito, e alterações em nav e tela projetos

--- a/src/app/core/pages/components/nav/nav.component.html
+++ b/src/app/core/pages/components/nav/nav.component.html
@@ -21,9 +21,10 @@
       <div
         class="ml-16 mr-30 flex items-center justify-between px-5 text-sky-900"
       >
-         <i class="pi pi-moon" style="font-size: 2.2rem;"></i>
-        <i class="pi pi-user" style="font-size: 2.2rem;"></i>
+        <i class="pi pi-bell p-4 rounded-full hover:bg-sky-800 hover:text-corNav hover:shadow-2xl" style="font-size: 1.7rem;"></i>
+        <i class="pi pi-moon p-4 rounded-full hover:bg-sky-800 hover:text-corNav hover:shadow-2xl" style="font-size: 1.7rem;"></i>
+        <i class="pi pi-user p-4 rounded-full hover:bg-sky-800 hover:text-corNav hover:shadow-2xl" style="font-size: 1.7rem;"></i>
       </div>
     </div>
   </div>
->>>>>>> 4ee776137b60ab9e1eb38d1b597a440dd905b581
+
