--- a/src/app/core/pages/components/car/car.component.html
+++ b/src/app/core/pages/components/car/car.component.html
@@ -1,13 +1,16 @@
-<div class="w-4/5 h-3/5 min-h-full bg-white drop-shadow-2xl rounded">
+<div class="w-11/12 h-3/5 min-h-full bg-white drop-shadow-2xl rounded-md">
     <div class="flex items-center justify-between p-3">
-        <p>data final: 00/00</p>
-        <div>
-            <i class="pi pi-circle"></i>
-            <i class="pi pi-circle"></i>
+        <p class="text-sky-900 text-xl">data final: 00/00</p>
+        <div class="flex w-1/3 justify-end">
+            <div class="rounded-full bg-corVerde h-6 w-6 absolute"></div>
+            <div class="rounded-full bg-gray-300 mr-5 h-6 w-6"></div>
         </div>
     </div>
-    <div class="p-3">
-        <p>Titulo do Projeto</p>
+    <div class="w-full h-1 bg-gray-300">
+        <div class="w-1/2 h-full bg-corVerde"></div>
+    </div>
+    <div class="p-5">
+        <p class="text-2xl text-sky-900 font-bold">Titulo do Projeto</p>
         <div>
             <div class="flex items-center p-2">
                 <p-checkbox name="groupname" value="val1"></p-checkbox>
@@ -23,7 +26,7 @@
             </div>
         </div>
         <div class="w-full flex h-10 justify-end align-bottom">
-            <i class="pi pi-star"></i>
+            <i class="pi pi-star text-yellow-300" style="font-size: 1.5rem;"></i>
         </div>
     </div>
 </div>
