--- a/src/app/core/pages/tela-projetos/tela-projetos.component.html
+++ b/src/app/core/pages/tela-projetos/tela-projetos.component.html
@@ -13,18 +13,35 @@
                   class="w-1/3 h-14 text-xl max-w-xs"
                   label="Adicionar Projeto"
                 ></button>
+                <div>
+                  <p-button
+                  label="Ordenação"
+                  styleClass="p-button-text"
+                  iconPos="right"
+                  icon="pi pi-sort-alt"
+                ></p-button>
+                <p-button
+                  label="Visualização"
+                  styleClass="p-button-text"
+                  iconPos="right"
+                  icon="pi pi-eye"
+                ></p-button>
                 <p-button
                   label="Filtros"
                   styleClass="p-button-text"
                   iconPos="right"
                   icon="pi pi-filter"
                 ></p-button>
+                </div>
               </div>
           </div>
     </div>
   
-  <div class="w-3/4 mt-20">
-    <div class="grid grid-cols-3">
+  <div class="w-3/4 mt-20 mb-20">
+    <div class="grid grid-cols-3 gap-y-20">
+      <app-car class="flex justify-center"></app-car>
+      <app-car class="flex justify-center"></app-car>
+      <app-car class="flex justify-center"></app-car>
       <app-car class="flex justify-center"></app-car>
       <app-car class="flex justify-center"></app-car>
       <app-car class="flex justify-center"></app-car>
