--- a/src/app/core/pages/components/nav/nav.component.html
+++ b/src/app/core/pages/components/nav/nav.component.html
@@ -1,8 +1,13 @@
+<div [ngStyle]="hovered ? {'width': 16 + '%'} : {'width': largura + '%'}" style="z-index: 1000; border-right: 6px solid #E9EDF1;"  class=" bg-[#185E77]  h-screen fixed duration-300">
+      <div>
 
-<div class="w-full h-20 bg-corNav flex justify-center drop-shadow-md">
+      </div>
+</div>
+
+<div class="w-full h-20 bg-corNav flex justify-center  drop-shadow-md z-0">
     <div class="w-4/5 h-20 bg-corNav grid grid-cols-5 ">
       <div class="flex items-center justify-start px-5 text-sky-900">
-        <i class="pi pi-list" style="font-size: 2.2rem;"></i>
+        <i class="pi pi-list cursor-pointer" style="font-size: 2.2rem; z-index: 1001; position: fixed;" (click)="sideBar()" ></i>
       </div>
       <div
         class="flex items-center justify-start px-5 col-start-3 col-end-5 h-full"
@@ -26,4 +31,3 @@
       </div>
     </div>
   </div>
->>>>>>> 4ee776137b60ab9e1eb38d1b597a440dd905b581
