--- a/src/app/core/pages/tela-projetos/tela-projetos.component.html
+++ b/src/app/core/pages/tela-projetos/tela-projetos.component.html
@@ -1,4 +1,4 @@
-<div class="w-full h-full bg-white flex flex-col items-center">
+<div [ngStyle]="{'content-shifted': isSidebarOpen}" class="transition-transform duration-300 w-full h-full bg-white flex flex-col items-center">
         <div class="flex justify-center pt-16 h-2/6 w-full">
             <div class="w-3/4">
               <p class="text-5xl text-sky-900 font-bold pb-6 drop-shadow-xl">
