sideBar ta feita

--- a/src/app/core/pages/components/nav/nav.component.html
+++ b/src/app/core/pages/components/nav/nav.component.html
@@ -1,6 +1,6 @@
-<div [ngStyle]="hovered ? {'width': 16 + '%'} : {'width': largura + '%'}" style="z-index: 1000; border-right: 6px solid #E9EDF1;"  class=" bg-[#185E77]  h-screen fixed duration-300">
-      <div>
-
+<div [ngStyle]="{'width': largura + '%'}" style="z-index: 1000; border-right: 6px solid #E9EDF1;"  class=" bg-[#185E77]  h-screen fixed duration-300">
+      <div class="w-[20%] absolute top-5 right-5 " (click)="sideBar()">
+        <img src="https://icon-library.com/images/x-icon-white/x-icon-white-0.jpg" alt="">
       </div>
 </div>
 
