--- a/src/app/core/pages/components/nav/nav.component.html
+++ b/src/app/core/pages/components/nav/nav.component.html
@@ -21,9 +21,9 @@
       <div
         class="ml-16 mr-30 flex items-center justify-between px-5 text-sky-900"
       >
-        <i class="pi pi-bell p-4 rounded-full hover:bg-sky-800 hover:text-corNav hover:shadow-2xl" style="font-size: 1.7rem;"></i>
-        <i class="pi pi-moon p-4 rounded-full hover:bg-sky-800 hover:text-corNav hover:shadow-2xl" style="font-size: 1.7rem;"></i>
-        <i class="pi pi-user p-4 rounded-full hover:bg-sky-800 hover:text-corNav hover:shadow-2xl" style="font-size: 1.7rem;"></i>
+        <i class="pi pi-bell p-4 rounded-full hover:bg-sky-800 hover:text-corNav hover:shadow-2xl hover: cursor-pointer" style="font-size: 1.7rem;"></i>
+        <i class="pi pi-moon p-4 rounded-full hover:bg-sky-800 hover:text-corNav hover:shadow-2xl hover: cursor-pointer" style="font-size: 1.7rem;"></i>
+        <i class="pi pi-user p-4 rounded-full hover:bg-sky-800 hover:text-corNav hover:shadow-2xl hover: cursor-pointer" style="font-size: 1.7rem;"></i>
       </div>
     </div>
   </div>
