--- a/src/app/core/pages/components/car/car.component.html
+++ b/src/app/core/pages/components/car/car.component.html
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class="w-full flex h-10 justify-end align-bottom">
-            <i class="pi pi-star text-yellow-300" style="font-size: 1.5rem;"></i>
+            <i class="pi pi-star text-corVerde" style="font-size: 1.5rem;"></i>
         </div>
     </div>
 </div>
