--- a/src/app/core/pages/components/car/car.component.html
+++ b/src/app/core/pages/components/car/car.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="p-5">
         <p class="text-2xl text-sky-900 font-bold">Titulo do Projeto</p>
-        <div>
+        <div class="pt-3">
             <div class="flex items-center p-2">
                 <p-checkbox name="groupname" value="val1"></p-checkbox>
                 <p class="pl-2">Tarefa 1</p>
