--- a/src/app/core/pages/components/car/car.component.html
+++ b/src/app/core/pages/components/car/car.component.html
@@ -1,4 +1,4 @@
-<div class="w-11/12 h-3/5 min-h-full bg-white drop-shadow-2xl rounded-md">
+<div class="w-full lg:w-11/12 lg:h-3/5 lg:min-h-full bg-white drop-shadow-2xl rounded-md">
     <div class="flex items-center justify-between p-3">
         <p class="text-sky-900 text-xl">data final: 00/00</p>
         <div class="flex w-1/3 justify-end">
