--- a/src/app/core/pages/tela-projetos/tela-projetos.component.html
+++ b/src/app/core/pages/tela-projetos/tela-projetos.component.html
@@ -47,8 +47,10 @@
       <app-car class="mb-5 lg:mb-0 flex justify-center"></app-car>
     </div>
   </div>
-  <div class="h-20 w-20 p-5 rounded-full bg-corVerde fixed right-8 flex justify-center items-center " style="top : 85%;">
-    <i class="pi pi-comments" style="color: #fff; font-size:2rem;"></i>
+  <div class="place-self-end  pr-24 fixed">
+    <div class="h-20 w-20 p-5 rounded-full bg-corVerde absolute flex justify-center items-center top-[90%]">
+      <i class="pi pi-comments" style="color: #fff; font-size:2rem;"></i>
+    </div>
+    <div class="h-4 w-4 p-3 bg-orange-400 rounded-full absolute top-[90%]" ></div>
   </div>
-  <div class="h-4 w-4 p-3 bg-orange-400 rounded-full fixed right-10" style="top:84.5%;"></div>
 </div>
