--- a/src/app/core/pages/tela-projetos/tela-projetos.component.html
+++ b/src/app/core/pages/tela-projetos/tela-projetos.component.html
@@ -1,4 +1,4 @@
-<div [ngStyle]="{'content-shifted': isSidebarOpen}" class="transition-transform duration-300 w-full h-full bg-white flex flex-col items-center">
+<div [ngStyle]="{'content-shifted': isSidebarOpen}" class="pt-10 transition-transform duration-300 w-full h-full bg-white flex flex-col items-center">
         <div class="flex justify-center pt-16 h-2/6 w-full">
             <div class="w-3/4">
               <p class="text-3xl lg:text-5xl text-sky-900 font-bold pb-6 drop-shadow-xl">
@@ -45,9 +45,34 @@
       <app-car class="mb-5 lg:mb-0 flex justify-center"></app-car>
       <app-car class="mb-5 lg:mb-0 flex justify-center"></app-car>
       <app-car class="mb-5 lg:mb-0 flex justify-center"></app-car>
+      <app-car class="mb-5 lg:mb-0 flex justify-center"></app-car>
+      <app-car class="mb-5 lg:mb-0 flex justify-center"></app-car>
+      <app-car class="mb-5 lg:mb-0 flex justify-center"></app-car>
+      <app-car class="mb-5 lg:mb-0 flex justify-center"></app-car>
+      <app-car class="mb-5 lg:mb-0 flex justify-center"></app-car>
+      <app-car class="mb-5 lg:mb-0 flex justify-center"></app-car>
+      <app-car class="mb-5 lg:mb-0 flex justify-center"></app-car>
+      <app-car class="mb-5 lg:mb-0 flex justify-center"></app-car>
+      <app-car class="mb-5 lg:mb-0 flex justify-center"></app-car>
+      <app-car class="mb-5 lg:mb-0 flex justify-center"></app-car>
+      <app-car class="mb-5 lg:mb-0 flex justify-center"></app-car>
+      <app-car class="mb-5 lg:mb-0 flex justify-center"></app-car>
+      <app-car class="mb-5 lg:mb-0 flex justify-center"></app-car>
+      <app-car class="mb-5 lg:mb-0 flex justify-center"></app-car>
+      <app-car class="mb-5 lg:mb-0 flex justify-center"></app-car>
+      <app-car class="mb-5 lg:mb-0 flex justify-center"></app-car>
+      <app-car class="mb-5 lg:mb-0 flex justify-center"></app-car>
+      <app-car class="mb-5 lg:mb-0 flex justify-center"></app-car>
+      <app-car class="mb-5 lg:mb-0 flex justify-center"></app-car>
+      <app-car class="mb-5 lg:mb-0 flex justify-center"></app-car>
+      <app-car class="mb-5 lg:mb-0 flex justify-center"></app-car>
+      <app-car class="mb-5 lg:mb-0 flex justify-center"></app-car>
+      <app-car class="mb-5 lg:mb-0 flex justify-center"></app-car>
+      <app-car class="mb-5 lg:mb-0 flex justify-center"></app-car>
+
     </div>
   </div>
-  <div class="place-self-end  pr-24 fixed">
+  <div class="place-self-end  pr-24 top-[90%] fixed">
     <div class="h-20 w-20 p-5 rounded-full bg-corVerde absolute flex justify-center items-center top-[90%]">
       <i class="pi pi-comments" style="color: #fff; font-size:2rem;"></i>
     </div>
