--- a/src/app/core/pages/components/car/car.component.html
+++ b/src/app/core/pages/components/car/car.component.html
@@ -1,4 +1,4 @@
-<div class="w-full lg:w-11/12 lg:h-3/5 lg:min-h-full bg-white drop-shadow-2xl rounded-md">
+<div class="w-full lg:w-11/12 lg:h-3/5 lg:min-h-full bg-white drop-shadow-xl rounded-md mt-4">
     <div class="flex items-center justify-between p-3">
         <p class="text-sky-900 text-xl">data final: 00/00</p>
         <div class="flex w-1/3 justify-end">
@@ -10,7 +10,7 @@
         <div class="w-1/2 h-full bg-corVerde"></div>
     </div>
     <div class="p-5">
-        <p class="text-2xl text-sky-900 font-bold">Titulo do Projeto</p>
+        <p class="text-2xl text-sky-900 font-bold">Titulo da Tarefa</p>
         <div class="pt-3">
             <div class="flex items-center p-2">
                 <p-checkbox name="groupname" value="val1"></p-checkbox>
