--- a/src/app/core/pages/tela-tarefas/tela-tarefas.component.html
+++ b/src/app/core/pages/tela-tarefas/tela-tarefas.component.html
@@ -9,7 +9,7 @@
         <div class="mt-10 lg:flex justify-between">
           <button pButton type="button" icon="pi pi-plus" iconPos="left"
             class="text-sm lg:w-1/3 h-14 lg:text-xl max-w-xs" label="Adicionar Tarefa"></button>
-          <div>
+          <div class="gap-2 xl:p-4 pb-0">
             <p-button label="Ordenação" styleClass="p-button-text" iconPos="right" icon="pi pi-sort-alt"></p-button>
             <p-button label="Visualização" styleClass="p-button-text" iconPos="right" icon="pi pi-eye"></p-button>
             <p-button label="Filtros" styleClass="p-button-text" iconPos="right" icon="pi pi-filter"></p-button>
@@ -17,7 +17,7 @@
         </div>
       </div>
     </div>
-    <div class="w-3/4 h-[62vh] 2xl:h-[67.8vh] overflow-y-auto flex justify-center border-t-2 rounded-xl">
+    <div class="w-3/4 h-[61vh] 2xl:h-[66vh] overflow-y-auto flex justify-center border-t-2 rounded-xl">
       <div class="w-full mb-20 relative">
         <div class=" lg:grid grid-cols-3 gap-y-20">
           <app-car class="mb-5 lg:mb-0 flex justify-center"></app-car>
@@ -54,11 +54,11 @@
         </div>
       </div>
     </div>
-    <div class="place-self-end right-[-2.5rem] xl:right-0 pr-24 top-[92%] lg:top-[88%] fixed">
-      <div class="w-10 h-10 lg:h-20 lg:w-20 p-5 rounded-full bg-corVerde absolute flex justify-center items-center top-[90%]">
+    <div class="place-self-end right-[-2.5rem] xl:right-0 pr-24 top-[92%] xl:top-[88%] fixed">
+      <div class="w-10 h-10 xl:h-20 xl:w-20 p-5 rounded-full bg-corVerde absolute flex justify-center items-center top-[90%]">
         <i class="pi pi-comments text-white" style=" font-size: 1.3rem;"></i>
       </div>
-      <div class=" lg:h-4 lg:w-4 p-2 lg:p-4 left-6 lg:left-12 bg-orange-400 rounded-full absolute top-[90%]"></div>
+      <div class=" xl:h-4 xl:w-4 p-2 xl:p-4 left-6 xl:left-12 bg-orange-400 rounded-full absolute top-[90%]"></div>
     </div>
   </div>
 
